tests/lean/301.lean.expected.out
301.lean:1:5: error: expected token
301.lean:1:21: error: expected token
